--- a/asset/css/styleinterdit.css
+++ b/asset/css/styleinterdit.css
@@ -8,7 +8,7 @@
 }
 .serviceBox .service-icon{
     color: #fff;
-    background: linear-gradient(to right, #47CA4E, #01BB93);
+    background: linear-gradient(to right, #47CA4E,#02C06D);
     font-size: 50px;
     line-height: 93px;
     height: 90px;
@@ -31,7 +31,7 @@
 }
 .serviceBox .title{
     color: #027E9A;
-    font-size: 25px;
+    font-size: 24px;
     font-weight: 500;
     text-transform: capitalize;
     margin: auto auto 7px;
@@ -42,17 +42,9 @@
     line-height: 22px;
     margin: auto;
 }
-.serviceBox.red .service-icon{ background: linear-gradient(to right, #FF8D00, #FF2566); }
-.serviceBox.red .service-icon:after{ background: linear-gradient(to right, #CD2B3F, #FE6626); }
-.serviceBox.red .title{ color: #CD2B3F; }
-.serviceBox.purple .service-icon{ background: linear-gradient(to right, #C92CB0, #80208C); }
-.serviceBox.purple .service-icon:after{ background: linear-gradient(to right, #6020AB, #9323A1); }
-.serviceBox.purple .title{ color: #6020AB; }
-.serviceBox.blue .service-icon{ background: linear-gradient(to right, #00C3E4, #5941FD); }
-.serviceBox.blue .service-icon:after{ background: linear-gradient(to right, #373171, #0097F3); }
-.serviceBox.blue .title{ color: #373171; }
+
 body {
-    background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)), url('../img/fondecransave.jpg') no-repeat center center fixed;;
+    background-color: rgb(33,37,41);
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
